fixed activities list to add checkboxes and 'other' field

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,3 +30,11 @@ body {
 .tag-line {
     font-size: 25px;
 }
+
+#coldActivities {
+    display: none;
+    }
+
+#warmActivities {
+    display: none;
+}
